--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,28 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: aliceblue;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+// .chat-app-home {
+//   .chat-app-container {
+//     margin: 20px;
+//     display: flex;
+//     height: 100vh;
+//     .friend-list-container {
+//       width: 14%;
+//       border-right: 1px solid black;
+//       height: 100vh;
+//       padding: 10px;
+//     } 
+//     .chat-message-container{
+//       width: 70%;
+//       height: 100vh;
+//       padding: 10px;
+//     }
+//   }
+// }
