--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -4,3 +4,11 @@
   width: $width;
   white-space: nowrap;
 }
+
+@mixin profile-img-circle($width, $height) {
+  width: $width;
+  height: $height;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
