--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -47,4 +47,12 @@
   }
 }
 
+.empty-state-wrapper {
+  .no-data-text {
+    padding: 50px;
+    text-align: center;
+    font-size: 14px;
+    color: #929fa6;
+  }
+}
 
