--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -12,3 +12,9 @@
   object-fit: cover;
   object-position: center;
 }
+
+@mixin flex-center() {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} 
