--- a/src/styles/chat-app.scss
+++ b/src/styles/chat-app.scss
@@ -40,26 +40,46 @@
       }
     } 
     .chat-message-container {
-      width: 60%;
+      width: 70%;
       height: 100vh;
+      position: relative;
       padding: 10px;
-      .chat-messages {
-        .message{
-          min-width: 110px;
-          background-color: white;
-          width: 200px;
-          padding: 6px 7px 8px 9px;
-          margin-bottom: 5px;
-          .username {
-            display: flex;
-            font-size: 12.5px;
-            font-weight: 600;
-            color: #512da8;
-            line-height: 22px;
+
+      .chat-message-wrp {
+        max-height: 420px;
+        min-height: 420px;
+        overflow-y: auto;
+        .chat-messages {
+          .message-wrp {
+            .message {
+              min-width: 110px;
+              background-color: white;
+              width: 250px;
+              padding: 6px 7px 8px 9px;
+              margin-bottom: 5px;
+              .username {
+                display: flex;
+                font-size: 12.5px;
+                font-weight: 600;
+                color: #512da8;
+                line-height: 22px;
+              }        
+              .message-content {
+                color: rgb(38, 38, 38);            
+                font-size: 14px;
+                position: relative;
+                white-space: pre-wrap;
+                word-wrap: break-word;
+              }
+            }
           }
-          .message-content {
-            color: rgb(38, 38, 38);            
-            font-size: 14px;
+          .message-wrp.from-me {
+            display: flex;
+            justify-content: flex-end;
+            .message {
+              margin-bottom: 5px;
+              background-color: #ede7f6;
+            }
           }
         }
       }
@@ -68,9 +88,7 @@
         padding: 5px 10px;
         margin-top: 20px;
         position: absolute;
-        bottom: 10px;
-        // width: 68%;
-
+        width: 90%;
         .message-input {
           background-color: #ffffff;
           border-color: #fff;
@@ -79,7 +97,11 @@
           border-width: 1px;
           padding: 9px 12px 11px 12px;
           margin: 5px 10px;
+          width: 90%;
         }
+      }
+      .loader-wrapper {
+        position: relative;
       }
     }
   }
