--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,14 +29,56 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 400px; }
-  .loader-wrapper .loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+  position: absolute;
+  margin-top: 70px; }
+  .loader-wrapper .loader,
+  .loader-wrapper .loader:before,
+  .loader-wrapper .loader:after {
     border-radius: 50%;
-    width: 64px;
-    height: 64px;
-    animation: spin 1.5s linear infinite; }
+    width: 25px;
+    height: 25px;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation: load7 1.8s infinite ease-in-out;
+    animation: load7 1.8s infinite ease-in-out; }
+  .loader-wrapper .loader {
+    color: #3498db;
+    font-size: 10px;
+    margin: 80px auto;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s; }
+  .loader-wrapper .loader:before,
+  .loader-wrapper .loader:after {
+    content: '';
+    position: absolute;
+    top: 0; }
+  .loader-wrapper .loader:before {
+    left: -3.5em;
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s; }
+  .loader-wrapper .loader:after {
+    left: 3.5em; }
+
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em; }
+  40% {
+    box-shadow: 0 2.5em 0 0; } }
+
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em; }
+  40% {
+    box-shadow: 0 2.5em 0 0; } }
 
 .empty-state-wrapper .no-data-text {
   padding: 50px;
@@ -83,30 +125,44 @@
         text-overflow: ellipsis;
         white-space: nowrap; }
   .chat-app-home .chat-app-container .chat-message-container {
-    width: 60%;
+    width: 70%;
     height: 100vh;
+    position: relative;
     padding: 10px; }
-    .chat-app-home .chat-app-container .chat-message-container .chat-messages .message {
-      min-width: 110px;
-      background-color: white;
-      width: 200px;
-      padding: 6px 7px 8px 9px;
-      margin-bottom: 5px; }
-      .chat-app-home .chat-app-container .chat-message-container .chat-messages .message .username {
+    .chat-app-home .chat-app-container .chat-message-container .chat-message-wrp {
+      max-height: 420px;
+      min-height: 420px;
+      overflow-y: auto; }
+      .chat-app-home .chat-app-container .chat-message-container .chat-message-wrp .chat-messages .message-wrp .message {
+        min-width: 110px;
+        background-color: white;
+        width: 250px;
+        padding: 6px 7px 8px 9px;
+        margin-bottom: 5px; }
+        .chat-app-home .chat-app-container .chat-message-container .chat-message-wrp .chat-messages .message-wrp .message .username {
+          display: flex;
+          font-size: 12.5px;
+          font-weight: 600;
+          color: #512da8;
+          line-height: 22px; }
+        .chat-app-home .chat-app-container .chat-message-container .chat-message-wrp .chat-messages .message-wrp .message .message-content {
+          color: #262626;
+          font-size: 14px;
+          position: relative;
+          white-space: pre-wrap;
+          word-wrap: break-word; }
+      .chat-app-home .chat-app-container .chat-message-container .chat-message-wrp .chat-messages .message-wrp.from-me {
         display: flex;
-        font-size: 12.5px;
-        font-weight: 600;
-        color: #512da8;
-        line-height: 22px; }
-      .chat-app-home .chat-app-container .chat-message-container .chat-messages .message .message-content {
-        color: #262626;
-        font-size: 14px; }
+        justify-content: flex-end; }
+        .chat-app-home .chat-app-container .chat-message-container .chat-message-wrp .chat-messages .message-wrp.from-me .message {
+          margin-bottom: 5px;
+          background-color: #ede7f6; }
     .chat-app-home .chat-app-container .chat-message-container .message-input-wrp {
       background-color: #efefef;
       padding: 5px 10px;
       margin-top: 20px;
       position: absolute;
-      bottom: 10px; }
+      width: 90%; }
       .chat-app-home .chat-app-container .chat-message-container .message-input-wrp .message-input {
         background-color: #ffffff;
         border-color: #fff;
@@ -114,7 +170,10 @@
         border-style: solid;
         border-width: 1px;
         padding: 9px 12px 11px 12px;
-        margin: 5px 10px; }
+        margin: 5px 10px;
+        width: 90%; }
+    .chat-app-home .chat-app-container .chat-message-container .loader-wrapper {
+      position: relative; }
 
 .login-container {
   display: flex;
@@ -150,4 +209,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #f7f7f7; }
+  background-color: #f7f7f7;
+  height: 100%;
+  overflow: hidden; }
